k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-server
  labels:
    app: oauth2-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oauth2-server
  template:
    metadata:
      labels:
        app: oauth2-server
    spec:
      volumes:
        - name: keys-volume
          secret:
            secretName: oauth2-keys
      containers:
      - name: oauth2-server
        image: renco3/cariad-exercise:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keys-volume
          mountPath: "/keys"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
