k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-server
  labels:
    app: oauth2-server
spec:
  selector:
    app: oauth2-server
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
